[project]
name = "nwp-to-parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "altair>=5.5.0",
    "fsspec>=2025.2.0",
    "marimo>=0.11.7",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "xarray>=2025.1.2",
    "zarr>=3.0.3",
]
